fixed tools page and aligned images

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -5,6 +5,15 @@
     border-radius: 25px;
     }
 
+.images{
+    padding-left: 200px;
+    display: block;
+    margin-left: 200px;
+    line-height:100px;
+    width: 100px;
+    height: 100px;
+}
+
 #sections{
     transform: translate(700px, 50px);
     font-size:50px;
@@ -16,10 +25,6 @@
     border-color: black;
     border-style: outset;
     border-width: 10px
-}
-
-h2{
-    padding-top: 40px
 }
 
 #link-names{
@@ -46,6 +51,43 @@ h2{
  
 }
 
+.header-text{
+    margin-left: 50px;
+    margin-top:0px;
+}
+
+#thorhammer{
+    transform: translate(1150px, -100px);
+    width:75%
+}
+
+#home{
+    transform: translate(1400px, -150px);
+    font-size:50px;
+}
+
+#tools-list{
+    padding-top: 100px;
+    padding-left: 100px;
+}
+
+.list-items{
+    height: 100px;
+    width: 100px;
+    font-size: 50px;
+}
+
+#thats-it{
+    text-align:center;
+    padding-left:400px;
+    font-size: 80px;
+
+}
+
+h2{
+    padding-top: 40px
+}
+
 body{
     overflow: hidden;
     border-color: black;
@@ -54,7 +96,7 @@ body{
     width: 1810px;
     height: 900px;
     margin:0px;
-
+    background-color: grey;
 }
 
 header{
@@ -69,17 +111,3 @@ header{
     border-width: 15px
 }
 
-.header-text{
-    margin-left: 50px;
-    margin-top:0px;
-}
-
-#thorhammer{
-    transform: translate(1150px, -100px);
-    width:75%
-}
-
-body{
-    background-color: grey;
-    
-}
